--- a/css/index.css
+++ b/css/index.css
@@ -272,3 +272,123 @@
   line-height: 2.5;
   padding-top: 50px;
 }
+
+.recruit .btn a {
+  text-align: center;
+  background: #ff8856;
+  padding: 20px 60px;
+  position: relative;
+  top: 90px;
+  color: #fff;
+  font-weight: bold;
+}
+
+.recruit img {
+  position: relative;
+  float: right;
+  width: 35%;
+  height: auto;
+  z-index: 1;
+  bottom: 500px;
+}
+
+.recruit_bg {
+  width: 80%;
+  height: 600px;
+  background-color: #eee;
+  position: absolute;
+  bottom: 150px;
+  z-index: 0;
+}
+
+footer {
+  display: inline-block;
+  position: relative;
+  width: 100%;
+}
+
+.footer_inner {
+  display: inline-block;
+  position: relative;
+  margin-left: 200px;
+  z-index: 1;
+  top: 230px;
+}
+
+.footer_inner img {
+  width: 200px;
+}
+
+.footer_inner p {
+  width: 150px;
+  font-size: 10px;
+}
+
+.footer_bg {
+  width: 80%;
+  float: right;
+  height: 300px;
+  background-color: #eee;
+  position: relative;
+  z-index: 0;
+}
+
+.footer_list ul {
+  float: right;
+  z-index: 1;
+}
+
+.footer_list ul::after {
+  content: "";
+  position: absolute;
+  height: 300px;
+  border-left: 1px solid #ccc;
+  color: #555;
+  top: 0;
+}
+
+.footer_list ul li {
+  width: 200px;
+  padding: 20px 0 0 40px;
+  font-weight: bold;
+  font-size: 12px;
+}
+
+.copyright {
+  float: right;
+  font-size: 5px;
+  font-weight: bold;
+  padding: 10px;
+}
+
+.contact {
+  position: relative;
+  width: 100%;
+}
+
+.contact h3 {
+  font-size: 50px;
+  color: #ff8856;
+  text-align: center;
+}
+
+.contact h3 small {
+  font-size: 20px;
+  color: #555;
+}
+
+.contact p {
+  width: 40%;
+  margin: 0 auto;
+  text-align: center;
+  padding-top: 80px;
+}
+
+.contact .btn a {
+  text-align: center;
+  position: relative;
+  background: #ff8856;
+  padding: 20px 60px;
+  color: #fff;
+  font-weight: bold;
+}
