--- a/css/business.css
+++ b/css/business.css
@@ -26,7 +26,7 @@
 }
 
 .business_top li small {
-  color: #ff8856;
+  color: #669696;
 }
 
 #business_list1,
@@ -49,7 +49,7 @@
 
 .business_list h1 small {
   font-size: 12px;
-  color: #ff8856;
+  color: #669696;
 }
 
 .business_list h2 {
@@ -137,7 +137,7 @@
   float: right;
   width: 13%;
   text-align: center;
-  background: #ff8856;
+  background: #669696;
   padding: 10px 20px;
   margin: 0 17% 8% 0;
 }
@@ -178,7 +178,7 @@
 
 .letter_list h2 small {
   font-size: 15px;
-  color: #ff8856;
+  color: #669696;
 }
 
 .letter_item p {
