--- a/css/news.css
+++ b/css/news.css
@@ -32,9 +32,9 @@
 .news_category {
   font-weight: bold;
   padding: 2px 5px;
-  border: 1px solid #ff8856;
+  border: 1px solid #669696;
   font-size: 12px;
-  color: #ff8856;
+  color: #669696;
 }
 
 .news_ttl {
