--- a/css/recruit.css
+++ b/css/recruit.css
@@ -26,7 +26,7 @@
 }
 
 .recruit_top li small {
-  color: #ff8856;
+  color: #669696;
 }
 
 #recruit_list1,
@@ -49,7 +49,7 @@
 
 .recruit_list h2 small {
   font-size: 12px;
-  color: #ff8856;
+  color: #669696;
 }
 
 .recruit_list h3 {
@@ -117,7 +117,7 @@
 }
 
 .intern h1 span {
-  color: #ff8856;
+  color: #669696;
 }
 
 .intern h1 small {
@@ -189,7 +189,7 @@
 
 .intro_txt h2 small {
   font-size: 15px;
-  color: #ff8856;
+  color: #669696;
 }
 
 .intro_descript {
@@ -215,7 +215,7 @@
   font-weight: bold;
   font-size: 40px;
   padding-right: 20px;
- color: #ff8856;
+ color: #669696;
 }
 
 .question_list {
